Fix style on smaller screens

--- a/static/main.scss
+++ b/static/main.scss
@@ -27,7 +27,7 @@ footer {
 
 .instances {
 
-  max-width: 1200px;
+  max-width: min(1200px, 100vw);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1rem;
